flxed scrollbar issue

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,6 +8,7 @@
 }
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    overflow: hidden;
 }
 
 html, body.desktop { 
